# hio-monitor

./: .gitignore  CMakeLists.txt  README.md  hiomon.qmlproject  qml.qrc  qmlmodules  qtquickcontrols2.conf  res.qrc
.github/workflows/: linux.yaml  linux_old.yaml  macos.yaml  windows.yaml
ci/linux/: hiomon.desktop
ci/macos/: Info.plist
ci/windows/: hiomon.rc
ci/windows/installer/config/: config.xml
content/: App.qml  AppNotification.qml  AppSettings.qml  BluetoothPage.qml  BluetoothWelcome.qml  BtDeviceInfo.qml  CMakeLists.txt  CommandHistory.qml  ConsolePage.qml  ConsoleWelcome.qml  DeviceLog.qml  FlashPage.qml  InteractiveShell.qml  LoadingIndicator.qml  PagePanel.qml  Search.qml  SideButton.qml  TextView.qml  ToolPanel.qml
include/jlink/: GLOBAL.h  JLINKARM_Const.h  JLinkARMDLL.h  SYS.h  TYPES.h  UTIL.h  Version.h
include/nrfjprog/: DllCommonDefinitions.h  mergehex.h  nrfjprog.h
lib/jlink/linux/: libjlinkarm.so.7
lib/jlink/windows/: JLink.lib  JLinkARM.lib  JLinkARM_x64.lib  JLink_x64.lib  SYS.lib  SYS_x64.lib  UTIL.lib  UTIL_x64.lib
lib/nrfjprog/windows/: nrfjprog.lib
resources/icons/: icons.icns
src/: bluetooth.cpp  bluetooth.h  bluetoothworker.cpp  bluetoothworker.h  btdeviceinfo.cpp  btdeviceinfo.h  btdevicemodel.cpp  btdevicemodel.h  btworker.cpp  btworker.h  chester.cpp  chester.h  deviceInterface.h  deviceinfo.cpp  deviceinfo.h  devicemodel.cpp  devicemodel.h  filedownloader.cpp  filedownloader.h  filehandler.cpp  filehandler.h  flash.cpp  flash.h  historyfile.cpp  historyfile.h  import_qml_plugins.h  main.cpp  messagemodel.cpp  messagemodel.h  searchcomponent.cpp  searchcomponent.h  searchhighlighter.cpp  searchhighlighter.h  updatechecker.cpp  updatechecker.h
views/: AppNotification.qml  AppSettings.qml  BluetoothPage.qml  BluetoothWelcome.qml  BtDeviceInfo.qml  CMakeLists.txt  CommandHistory.qml  ConsolePage.qml  ConsoleWelcome.qml  DeviceLog.qml  FlashPage.qml  InteractiveShell.qml  LoadingIndicator.qml  PagePanel.qml  Search.qml  Searchhelper.qml  SideButton.qml  TextLabel.qml  TextView.qml  ToolPanel.qml  UpdateDIalog.qml  UpdateDialog.qml  main.qml
